<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="subtitle_username">Nama Pengguna</string>
    <string name="subtitle_email">Email</string>
    <string name="subtitle_edit_account">Ubah Akun</string>
    <string name="text_edit_username">Ubah Nama Pengguna</string>
    <string name="text_password">Ubah Password</string>
    <string name="subtitle_other">Lainnya</string>
    <string name="text_setting">Pengaturan</string>
    <string name="text_about">Tentang Aplikasi</string>
    <string name="desc_logout">Apakah kamu yakin akan keluar dari aplikasi?</string>
    <string name="desc_about">EventTech Organizer merupakan platform untuk mempublikasikan event dibidang IT yang akan dapat dilihat para pencari event pada aplikasi EventTech</string>
    <string name="text_logout">Keluar</string>

</resources>